salesforce/force-app/main/default/objects/Contact/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <label>Emergency Contact Name</label>
    <description>From the website volunteer or waiver form.</description>
    <length>120</length>
    <type>Text</type>
</CustomField>