salesforce/force-app/main/default/objects/Contact/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <label>Emergency Contact Relationship</label>
    <description>From the website volunteer or waiver form.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>