salesforce/force-app/main/default/objects/Contact/fields/Medical_Information__c.field-meta.xml
<CustomField>
    <fullName>Medical_Information__c</fullName>
    <label>Medical Information</label>
    <description>Medical information disclosed on the website liability waiver. Restricted by the Volunteer Sensitive Data permission set.</description>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>