salesforce/force-app/main/default/objects/Contact/fields/Needs_Service_Hours_Verification__c.field-meta.xml
<CustomField>
    <fullName>Needs_Service_Hours_Verification__c</fullName>
    <label>Needs Service Hours Verification</label>
    <description>Checked when a volunteer registers with a service hours requirement (school, employer, court, or other).</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>