salesforce/force-app/main/default/objects/Contact/fields/Service_Hours_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Hours_Details__c</fullName>
    <label>Service Hours Details</label>
    <description>Category, legal nature, organization, contact, hours, and deadline from the website volunteer form. Restricted by the Volunteer Sensitive Data permission set.</description>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>