salesforce/force-app/main/default/objects/Contact/fields/Volunteer_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Accommodations__c</fullName>
    <label>Volunteer Accommodations</label>
    <description>Accommodations requested on the website volunteer form. Restricted by the Volunteer Sensitive Data permission set.</description>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>