salesforce/force-app/main/default/objects/Contact/fields/Waiver_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Waiver_IP_Address__c</fullName>
    <label>Waiver IP Address</label>
    <description>IP address that submitted the website liability waiver.</description>
    <length>45</length>
    <type>Text</type>
</CustomField>