salesforce/force-app/main/default/objects/Contact/fields/Waiver_Signature__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Signature__c</fullName>
    <label>Waiver Signature</label>
    <description>Typed electronic signature from the website liability waiver.</description>
    <length>120</length>
    <type>Text</type>
</CustomField>