salesforce/force-app/main/default/objects/Contact/fields/Waiver_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Signed_Date__c</fullName>
    <label>Waiver Signed Date</label>
    <description>Date the liability waiver was signed on the website. The full signed record is attached to the Contact as a file.</description>
    <type>Date</type>
</CustomField>